<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="390dp"
        android:background="@drawable/rounded_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/expressionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="@font/roboto_light"
            android:gravity="end"
            android:text="@string/expression_title"
            android:textColor="@color/grey"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/expression"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/expression"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="@font/roboto_light"
            android:gravity="end"
            android:text=""
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@id/resultTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/expressionTitle" />

        <TextView
            android:id="@+id/resultTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="@font/roboto_light"
            android:gravity="end"
            android:text="@string/resultTitle"
            android:textColor="@color/grey"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/result"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/expression" />

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="@font/roboto_light"
            android:gravity="end"
            android:text=""
            android:textColor="@color/black"
            android:textFontWeight="400"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/resultTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/display">

        <Button
            android:id="@+id/button_7"
            style="@style/BlueButton"
            android:text="@string/button_7"
            app:layout_constraintEnd_toStartOf="@id/button_8"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_8"
            style="@style/BlueButton"
            android:text="@string/button_8"
            app:layout_constraintEnd_toStartOf="@id/button_9"
            app:layout_constraintStart_toEndOf="@id/button_7"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_9"
            style="@style/BlueButton"
            android:text="@string/button_9"
            app:layout_constraintEnd_toStartOf="@id/button_div"
            app:layout_constraintStart_toEndOf="@id/button_8"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_div"
            style="@style/GreenButton"
            android:text="@string/button_div"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_9"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_4"
            style="@style/BlueButton"
            android:text="@string/button_4"
            app:layout_constraintEnd_toStartOf="@id/button_5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_7" />

        <Button
            android:id="@+id/button_5"
            style="@style/BlueButton"
            android:text="@string/button_5"
            app:layout_constraintEnd_toStartOf="@id/button_6"
            app:layout_constraintStart_toEndOf="@id/button_4"
            app:layout_constraintTop_toBottomOf="@id/button_8" />

        <Button
            android:id="@+id/button_6"
            style="@style/BlueButton"
            android:text="@string/button_6"
            app:layout_constraintEnd_toStartOf="@id/button_mul"
            app:layout_constraintStart_toEndOf="@id/button_5"
            app:layout_constraintTop_toBottomOf="@id/button_9" />

        <Button
            android:id="@+id/button_mul"
            style="@style/GreenButton"
            android:text="@string/button_mul"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_6"
            app:layout_constraintTop_toBottomOf="@id/button_div" />

        <Button
            android:id="@+id/button_1"
            style="@style/BlueButton"
            android:text="@string/button_1"
            app:layout_constraintEnd_toStartOf="@id/button_2"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_4" />

        <Button
            android:id="@+id/button_2"
            style="@style/BlueButton"
            android:text="@string/button_2"
            app:layout_constraintEnd_toStartOf="@id/button_3"
            app:layout_constraintStart_toEndOf="@id/button_1"
            app:layout_constraintTop_toBottomOf="@id/button_5" />

        <Button
            android:id="@+id/button_3"
            style="@style/BlueButton"
            android:text="@string/button_3"
            app:layout_constraintEnd_toStartOf="@id/button_sub"
            app:layout_constraintStart_toEndOf="@id/button_2"
            app:layout_constraintTop_toBottomOf="@id/button_6" />

        <Button
            android:id="@+id/button_sub"
            style="@style/GreenButton"
            android:text="@string/button_sub"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_3"
            app:layout_constraintTop_toBottomOf="@id/button_mul" />

        <Button
            android:id="@+id/button_0"
            style="@style/BlueButton"
            android:text="@string/button_0"
            app:layout_constraintEnd_toStartOf="@id/button_dec"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_1" />

        <Button
            android:id="@+id/button_dec"
            style="@style/GreenButton"
            android:text="@string/button_dec"
            app:layout_constraintEnd_toStartOf="@id/button_back"
            app:layout_constraintStart_toEndOf="@id/button_0"
            app:layout_constraintTop_toBottomOf="@id/button_2" />

        <Button
            android:id="@+id/button_back"
            style="@style/GreenButton"
            android:text="@string/button_back"
            app:layout_constraintEnd_toStartOf="@id/button_add"
            app:layout_constraintStart_toEndOf="@id/button_dec"
            app:layout_constraintTop_toBottomOf="@id/button_3" />

        <Button
            android:id="@+id/button_add"
            style="@style/GreenButton"
            android:text="@string/button_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_back"
            app:layout_constraintTop_toBottomOf="@id/button_sub" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>